$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-05-27 [C] Changed table header groupmgr.php (thread ID 64407) {eenemeenemuu}
2010-05-26 [B] Fixed clipping of comments (thread ID 64662) {eenemeenemuu}
2010-05-26 [B] Fixed display for regular users if they have no quota {eenemeenemuu}
2010-05-26 [B] Fixed quota display for regular users (thread ID 64452) {eenemeenemuu}
2010-05-26 [D] Added section about creating svn tags to documentation (thread ID 38932) {eenemeenemuu}
2010-05-25 [B] Porting the security fix that lead to the release of cpg1.4.27 for cpg1.5.x (making sure that image_processor.php doesn't exist) {GauGau}
2010-05-24 [D] Added screenshots to install screen documentation {GauGau}
2010-05-24 [D] Added fullsize jquery plugin to docs {GauGau}
2010-05-20 [S] Fixed potential XSS issue (thread ID 64734) {eenemeenemuu}
2010-05-20 [D] Added ownership section to permissions page. Added webserver response codes to errors page. {GauGau}
2010-05-19 [O] Revised session handling (thread ID 65012) {eenemeenemuu}
2010-05-19 [A] Added partial Czech translation (user contribution) {GauGau}
2010-05-11 [D] Added apache server response codes {GauGau}
2010-05-12 [B] Fixed language issue during installation (thread ID 64829) {eenemeenemuu}
2010-05-12 [B] Fixed dupes when ordering by position (thread ID 64919) {eenemeenemuu}
2010-05-11 [D] Added theme examples to navigation {GauGau}
2010-05-11 [D] Started Spanish translation of documentation (user contribution) {GauGau}
2010-05-11 [B] Fixed ambiguous column name (thread ID 64809) {eenemeenemuu}
2010-05-10 [A] Fixed check for missing JAVASCRIPT token (thread ID 63279) {eenemeenemuu}